--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,29 @@ __pycache__
 .vscode
 .env
 .DS_Store
+.mypy_cache
+
+# build output
+dist/
+.output/
+
+# dependencies
+node_modules/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+
+# environment variables
+.env
+.env.production
+
+# macOS-specific files
+.DS_Store
+
+pnpm-lock.yaml
+
+.astro
